cluster/apps/networking/traefik/external/devbin/dns/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: dns
  namespace: external
subsets:
  - addresses:
      - ip: 192.168.102.19
    ports:
      - name: default
        port: 81
        protocol: TCP
