cluster/apps/networking/traefik/external/devbin/dns/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns
  namespace: external
spec:
  ports:
    - name: default
      port: 81
      protocol: TCP
      targetPort: 81
  clusterIP: None
  type: ClusterIP
