cluster/apps/networking/traefik/external/devbin/dns/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: dns
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-secured-chain@kubernetescrd,default-rewrite-admin@kubernetescrd
  name: dns
  namespace: external
spec:
  ingressClassName: traefik
  rules:
    - host: "${SECRET_DNS_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: dns
                port:
                  number: 81
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "${SECRET_DNS_DOMAIN}"
      secretName: dns-tls
